<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_dailyData"
            android:icon="@drawable/calendar"
            android:title="@string/dailyData" />
        <item
            android:id="@+id/nav_weeklyData"
            android:icon="@drawable/calendar_clock"
            android:title="@string/weeklyData" />
        <item
            android:id="@+id/nav_exportData"
            android:icon="@drawable/share"
            android:title="@string/exportData" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout_user" />
        </menu>
    </item>

</menu>